app/frontend/components/tour/index/tour_index.css
.tour-index {
  &--list {
    margin: 25px 0 0 0;
    padding: 0;
  }
}

.tour-item {
  width: 23%;
  margin: 0 2% 0 0;
  height: 150px;
  display: inline-block;

  &--link {
    display: block;
    color: #000;
    text-decoration: none;
  }

  &--image {
    object-fit: cover;
    width: 100%;
    height: 150px;
    border-radius: 12px;
  }

  &--title {
    /* font-weight: bold; */
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
  }
}

.tour-item:nth-child(4n) {
  margin-right: 0;
}

@media screen and (max-width: 767px) {
  .tour-item {
    width: 47%;
    height: 200px;

    &--image {
      height: 200px;
    }
  }
}

